# MarketplaceAPI

./: .gitignore  README.md  docker-compose.yml
src/: AbstractRepository.py  Dockerfile  __init__.py  config.py  database.py  main.py  pyproject.toml
src/category/: __init__.py  models.py  repository.py  routes.py  schemas.py
src/migrations/: env.py
src/migrations/versions/: 5aad4a619da8_add_category.py  65c7038cd02b_add_foreign_key.py  fe5a7d262139_first.py
src/products/: __init__.py  models.py  repository.py  routes.py  schemas.py
