[tool.poetry]
name = "marketplaceapi"
version = "0.1.0"
description = "API for managing products on the marketplace"
authors = ["daria021 <113021883+daria021@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "1.13.1"
asyncpg = "0.29.0"
fastapi = "0.111.0"
fastapi-filter = "2.0.0"
pydantic = "2.7.4"
pydantic-settings = "2.3.3"
sqlalchemy = "2.0.30"
uvicorn = "0.30.1"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
